# SENTINEL

./: .gitignore  LATER.md  README.md  pyproject.toml  requirements.txt
attacks/: schema.json
attacks/01_direct_override/: authority_claim.json  simple_ignore.json
attacks/02_indirect_data/: document_injection.json  web_content.json
attacks/03_tool_hijacking/: parameter_injection.json
attacks/04_encoding_obfuscation/: base64.json
attacks/05_context_manipulation/: context_overflow.json
attacks/06_goal_hijacking/: priority_override.json
attacks/07_exfiltration/: data_extraction.json
attacks/08_persistence/: memory_implant.json
attacks/09_multi_stage/: trojan_setup.json
attacks/10_real_world/: documented_incidents.json
attacks/11_jailbreaks/: popular_jailbreaks.json
examples/: quickstart.py
src/sentinel/: __init__.py  cli.py
src/sentinel/defense/: __init__.py  middleware.py  monitor.py  policy.py
src/sentinel/detection/: __init__.py  classifier.py  heuristic.py  llm_judge.py  pipeline.py  result.py  semantic.py
src/sentinel/evaluation/: __init__.py  benchmark.py  gate_benchmark.py  gate_cases.json  metrics.py
src/sentinel/integrations/: __init__.py  anthropic.py  langchain.py  openai_agents.py
src/sentinel/redteam/: __init__.py  generator.py  loop.py  mutations.py
tests/: __init__.py  test_benchmark.py  test_defense.py  test_detection.py  test_gate_benchmark.py  test_redteam.py
