[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-ai"
version = "0.1.0"
description = "Prompt Injection Detection for Agentic AI Systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Noah Ing", email = "noah@example.com" }
]
keywords = [
    "ai",
    "llm",
    "security",
    "prompt-injection",
    "agents",
    "langchain",
    "openai",
    "anthropic"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "regex>=2023.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "scikit-learn>=1.3.0",
]
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
openai = [
    "openai>=1.10.0",
]
all = [
    "sentinel-ai[ml,langchain,anthropic,openai]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/noah-ing/SENTINEL"
Documentation = "https://github.com/noah-ing/SENTINEL#readme"
Repository = "https://github.com/noah-ing/SENTINEL"
Issues = "https://github.com/noah-ing/SENTINEL/issues"

[project.scripts]
sentinel = "sentinel.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/attacks",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
